--- a/index.html
+++ b/index.html
@@ -1402,11 +1402,13 @@
             border-radius: 50%;
             border: 2px solid #fff;
             background-color: #fff;
+            background-image: url("assets/foto.jpg");
+            background-size: cover;
             position: relative
         }
 
         .user_logo img {
-            object-fit: contain
+            object-fit: cover
         }
 
         .row.footer-infos {
@@ -1510,7 +1512,7 @@
             <div class="jsx-3828127790 row header-infos">
                 <div class="jsx-3828127790 flex flex-column items-center center">
                     <div class="jsx-3828127790 user_logo">
-                        <div
+                        <!-- <div
                             style="overflow:hidden;box-sizing:border-box;display:inline-block;position:relative;width:92px;height:92px">
                             <img alt="Logotipo de Paula Edwiges"
                                 src="assets/foto.jpg"
@@ -1522,7 +1524,7 @@
                                     decoding="async" data-nimg="fixed"
                                     style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%"
                                     class="user_avatar" loading="lazy"></noscript>
-                        </div>
+                        </div> -->
                     </div>
                     <h1 class="jsx-3828127790 section_title mt2">Paula Edwiges</h1>
                     <h2 class="jsx-3828127790 user_industry mt0 mb2">Estética e Bem-Estar</h2>
