--- a/index.html
+++ b/index.html
@@ -1533,7 +1533,9 @@
                 </div>
             </div>
             <div class="jsx-3578574604 row">
-                <a id="captureLeadOpen" target="_blank" href="https://api.whatsapp.com/send?phone=5531982084124&text=Ol%C3%A1,%20gostaria%20de%20entrar%20em%20contato%20para%20saber%20mais%20informa%C3%A7%C3%B5es!" data-vars-outbound-link="https://wa.me/5531982084124"
+                <a id="captureLeadOpen" target="_blank" 
+                href="https://api.whatsapp.com/send?phone=5531982084124&text=Ol%C3%A1,%20gostaria%20de%20saber%20mais%20sobre%20os%20pacotes%20e%20servi%C3%A7os!" 
+                data-vars-outbound-link="https://wa.me/5531982084124"
                     data-vars-outbound-slug="paula-edwiges"
                     class="jsx-3578574604 track-outbound-button amp-button amp-contact-button bg-light c-theme flex full button-whatsapp false"><span
                         class="amp-icon amp-icon-l absolute left-12 bg-theme public-page style-module_container__10ECe style-module_l__2MvAs"><svg
